# ThreadPoolLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
app/: main.cpp
docker/app/: Dockerfile
docker/base/: Dockerfile
examples/: examples.cpp
examples/support/: Foo.cpp  Foo.h
include/: Macros.h  Task.h  ThreadPool.h
src/: Task.cpp  ThreadPool.cpp
tests/: main.cpp
